--- a/inSooqApp/Base.lproj/LaunchScreen.storyboard
+++ b/inSooqApp/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,18 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backGround_icon" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-Za-bXA">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="402.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-Za-bXA">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="AppBackground"/>
                         <constraints>
-                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.4" constant="44" id="KUW-a9-123"/>
-                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-44" id="QHd-Iq-6os"/>
-                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="VYt-VE-k75"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6Sh-Za-bXA" secondAttribute="trailing" constant="-20" id="k4a-hF-1bZ"/>
-                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="u5S-QS-T7C"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Sh-Za-bXA" secondAttribute="bottom" id="99T-Fw-hrl"/>
+                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="BkV-Mv-hpQ"/>
+                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gHS-s3-dNt"/>
+                            <constraint firstItem="6Sh-Za-bXA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jr8-ty-Ram"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,7 +37,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="backGround_icon" width="250" height="218"/>
+        <image name="splash" width="375" height="812"/>
         <namedColor name="AppBackground">
             <color red="0.9649999737739563" green="0.9649999737739563" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
