--- a/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
@@ -7,6 +7,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BebasKai.ttf">
+            <string>BebasKai</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -36,14 +41,14 @@
                             </userDefinedRuntimeAttributes>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcR-dR-O8c">
-                            <rect key="frame" x="154" y="78.5" width="184" height="60"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                            <rect key="frame" x="168" y="72.5" width="156.5" height="72"/>
+                            <fontDescription key="fontDescription" name="BebasKai" family="Bebas Kai" pointSize="60"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sok-ll-OsU">
-                            <rect key="frame" x="258.5" y="235.5" width="123" height="60"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                            <rect key="frame" x="268" y="229.5" width="104.5" height="72"/>
+                            <fontDescription key="fontDescription" name="BebasKai" family="Bebas Kai" pointSize="60"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
