--- a/inSooqApp/Controllers/Forms/Elements/SimView/SimView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/SimView/SimView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FormPreviewView" customModule="inSooqApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SimView" customModule="inSooqApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -26,6 +26,12 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3T-6i-nvb">
+                            <rect key="frame" x="81" y="49" width="203" height="37"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -33,7 +39,10 @@
                         <constraint firstAttribute="height" constant="142" id="7Cj-81-kff"/>
                         <constraint firstItem="XFH-wW-PCc" firstAttribute="leading" secondItem="Ixq-bu-JOc" secondAttribute="leading" id="ACV-G7-Q78"/>
                         <constraint firstAttribute="trailing" secondItem="XFH-wW-PCc" secondAttribute="trailing" id="OL4-aK-1uY"/>
+                        <constraint firstItem="L3T-6i-nvb" firstAttribute="centerX" secondItem="XFH-wW-PCc" secondAttribute="centerX" multiplier="0.9" id="eiR-fl-BxJ"/>
                         <constraint firstAttribute="bottom" secondItem="XFH-wW-PCc" secondAttribute="bottom" id="fyY-EY-0WA"/>
+                        <constraint firstItem="L3T-6i-nvb" firstAttribute="centerY" secondItem="XFH-wW-PCc" secondAttribute="centerY" multiplier="0.95" id="i2i-U5-QCA"/>
+                        <constraint firstItem="L3T-6i-nvb" firstAttribute="width" secondItem="XFH-wW-PCc" secondAttribute="width" multiplier="0.5" id="poh-Tl-Ium"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -44,7 +53,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ixq-bu-JOc" secondAttribute="trailing" constant="4" id="MN1-rT-162"/>
                 <constraint firstItem="Ixq-bu-JOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="4" id="gZh-SC-x93"/>
@@ -56,6 +65,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="adImage" destination="XFH-wW-PCc" id="rL8-2Q-Lza"/>
+                <outlet property="numberLabel" destination="L3T-6i-nvb" id="7u4-AS-hyX"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="122.54464285714285"/>
         </view>
