--- a/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PlateView/PlateView.xib
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FormPreviewView" customModule="inSooqApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PlateView" customModule="inSooqApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="432"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -88,7 +88,10 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="adImage" destination="XFH-wW-PCc" id="rL8-2Q-Lza"/>
+                <outlet property="lowerImageView" destination="MDn-D2-vxZ" id="lQy-Xr-6XT"/>
+                <outlet property="lowerNumber" destination="Sok-ll-OsU" id="jGC-21-d18"/>
+                <outlet property="upperImageView" destination="XFH-wW-PCc" id="dsx-h4-9Dm"/>
+                <outlet property="upperNumber" destination="PcR-dR-O8c" id="aMT-30-9rU"/>
             </connections>
             <point key="canvasLocation" x="428.98550724637687" y="233.03571428571428"/>
         </view>
